# SonCAD

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md
.github/workflows/: cmake-multi-platform.yml
cmake/: CMakeLists.txt  SetupBoost.cmake  SetupOpenCASCADE.cmake  SetupOpenGL.cmake  cpplint.cmake
res/: SonCAD.qrc  SunCAD.qrc
src/: CMakeLists.txt  ResourceUtils.h  SonCAD.cc  SunCAD.cc
src/App/: AppContext.cc  AppContext.h  Application.cc  Application.h  CommandLine.cc  CommandLine.h  MainWindow.cc  MainWindow.h  ViewportView.cc  ViewportView.h  WelcomeDialog.cc  WelcomeDialog.h
src/App/Commands/: AppCommands.cc  AppCommands.h
src/Comm/: BaseObject.h  PixMapHelper.cc
src/Comm (2)/: Color.cs
src/Comm/Serialization/: ISerializer.h  QObjectSerializer.h  SerializationContext.cc  SerializationContext.h  Writer.h
src/Comm/Types/: Color.cc  Color.h
src/Core/: Core.h  CoreContext.cc  CoreContext.h  EntityContainer.cc  EntityContainer.h  Viewport.cc  Viewport.h  Workspace.cc  Workspace.h
src/Core/Extensions/: ColorExtensions.h
src/Core/Framework/Undo/: IUndoableTopology.h
src/Core/Project/: VisualStyles.cc  VisualStyles.h  WorkingContext.cc  WorkingContext.h
src/Core/Shapes/: IShapeOperand.h  Shape.cc  Shape.h
src/Core/Shapes/Primitives/: Box.cc  Box.h
src/Core/Topology/: Body.h  Document.cc  Document.h  Entity.cc  Entity.h  InteractiveEntity.cc  InteractiveEntity.h  Layer.cc  Layer.h  Model.cc  Model.h
src/Iact/Commands/: CommandHelper.cc  CommandHelper.h  DocumentCommands.cc  DocumentCommands.h  ModelCommands.cc  ModelCommands.h
src/Iact/Framework/: Editor.cc  Editor.h  Tool.cc  Tool.h  ToolAction.h  WorkspaceControl.cc  WorkspaceControl.h
src/Iact/HudElements/: Coord2DHudElement.cc  Coord2DHudElement.h  Cursors.cc  Cursors.h  HudContainer.cc  HudContainer.h  HudElement.cc  HudElement.h  IHudManager.h  MultiValueHudElement.cc  MultiValueHudElement.h
src/Iact/Primitives/: CreateBoxTool.cc  CreateBoxTool.h
src/Iact/ToolActions/: PointAction.cc  PointAction.h
src/Iact/Viewport/: IViewportMouseControl.h  ViewportMouseControlDefault .h  ViewportMouseControlDefault.cc  ViewportMouseControlDefault.h  ViewportPanel.cc  ViewportPanel.h
src/Iact/Visual/: Marker.cc  Marker.h  VisualObject.cc  VisualObject.h  VisualObjectManager.h  VisualShape.h
src/Iact/Workspace/: InteractiveContext.cc  InteractiveContext.h  ModelController.cc  ModelController.h  MouseEventData.cc  MouseEventData.h  ViewportController.cc  ViewportController.h  WorkspaceController.cc  WorkspaceController.h
src/Intf/: ICommand.h
src/Occt/AisExtensions/: AISX_Grid.cc  AISX_Grid.h
src/Occt/Managed/: AIS_PointEx.cc  AIS_PointEx.h
src/Occt/ValueTypes/: Pln.cc  Pln.h
src/Pres/: GlobalEventHandler.cc  GlobalEventHandler.h
src/Pres/Commands/: ActionCommand.cc  ActionCommand.h  CommandManager.cc  CommandManager.h  RelayCommand.cc  RelayCommand.h
src/core/: Application.cc  Application.h  mainwindow.cc  mainwindow.h
tests/: CMakeLists.txt  main.cc
